<resources>
    <string name="app_name">Howdy</string>
    <string name="firebasse_default_web_client_id" translatable="false">111780684034-0k9folgo7t1oe54acgjqil4n0mskaopf.apps.googleusercontent.com</string>
    <string-array name="linguagens">
        <item>Português brasileiro</item>
        <item>Inglês americano</item>
    </string-array>
    <string-array name="visibilidades">
        <item>Público</item>
        <item>Amigos</item>
    </string-array>
    <string-array name="categorias_de_post">
        <item>Esportes</item>
        <item>Notícias</item>
        <item>Jogos</item>
        <item>Filmes</item>
        <item>Moda</item>
        <item>Dúvidas</item>
    </string-array>
    <string-array name="howdy_coin_max_price_activity">
        <item>150 Howdy Coins</item>
        <item>100 Howdy Coins</item>
        <item>150 Howdy Coins</item>
        <item>10 Howdy Coins</item>
        <item>0 Howdy Coins</item>
    </string-array>
    <string-array name="activity_difficulties">
        <item>Básico</item>
        <item>Intermediário</item>
        <item>Avançado</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cadastro_incompleto">CadastroIncompletoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="userCreatorName">User creator name</string>
    <string name="createdAtPost">Há alguns segundos</string>
    <string name="textContentPost">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</string>
    <string name="commentsQuantity">23</string>
    <string name="postLikeQuantity">89</string>

</resources>