<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F8FA">

    <LinearLayout
        android:id="@+id/postagens_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="#F5F8FA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_creator_profile_photo_view"
                    android:layout_width="49dp"
                    android:layout_height="42.77dp"
                    android:layout_gravity="top"
                    android:src="@drawable/ic_logo_app" />
                <ImageView
                    android:id="@+id/iv_user_creator_patent"
                    android:contentDescription="Patent"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="-20sp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/transparent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/user_creator_name_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/userCreatorName"
                        android:textColor="#303135"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="9dp"
                        android:contentDescription="Topic ball"
                        android:layout_height="9dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_score_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/createdAtPost"
                        android:textColor="#99000000"
                        android:textSize="13sp"
                        android:id="@+id/created_at_view"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/text_content_view"
                    android:layout_width="293dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:text="@string/textContentPost"
                    android:textColor="#303135"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/btn_traduct"
                    android:contentDescription="translateButton"
                    android:layout_marginTop="5dp"
                    android:padding="3dp"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_gravity="top"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/main_blue_background"
                    android:src="@drawable/traduction"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/anime_dorohedoro"
                android:contentDescription="imageContent"
                android:id="@+id/iv_image_content"/>

        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_commentary_button"
                android:contentDescription="chatButton"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:scaleType="fitCenter"
                android:background="#F5F8FA"
                android:src="@drawable/ic_comentario_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:fontFamily="@font/roboto"
                android:text="@string/commentsQuantity"
                android:textColor="#303135"
                android:textSize="12sp"
                android:id="@+id/total_comments_view"/>

            <ImageButton
                android:contentDescription="likeButton"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:scaleType="fitCenter"
                android:layout_marginStart="80dp"
                android:background="#F5F8FA"
                android:src="@drawable/icons_gostar"
                android:id="@+id/iv_like_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:fontFamily="@font/roboto"
                android:text="@string/postLikeQuantity"
                android:textColor="#303135"
                android:textSize="12sp"
                android:id="@+id/total_likes_view"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>